- aes/gemsuper.c, desk/deskmain.c: Moved desktop traces into the AES,
  since kprintf() is not always available from user mode. (VRI)

2010-11-22
- Makefile: Use full 32-bit addresses, including in disassembly. This is
  necessary when the ROM is located at a nonstandard place. (VRI)
- bios/biosmem.c: Cleaned-up bmem_init() for 32-bit addresses. (VRI)
- bios/kprint.c: Improved dopanic() output. Better support for ColdFire
  stack frames. Each line must be printed with a single kcprintf() to be
  well displayed when the debug traces go to the console. (VRI)

2010-11-29
- desk/desk_rsc.c, desk/desk_rsc.h, desk/desksupp.c: Moved the strings
  FORMAT.PRG and FORMAT.TTP from the resource file to desksupp.c to make
  room. (VRI)

2010-12-26
- bios/conout.c: Fixed console line wrap in high resolutions. (VRI)
- cli/command.c: Fixed crash in EmuCON when typing a command name longer
  than 100 characters. (VRI)
- bios/conout.c: Fixed the BIOS console to support 256 color modes. (VRI)
- bios/conout.c: In EmuCON, keep the cursor enabled when running textmmode
  programs. (VRI)
- bios/conout.c: Do not flash the cursor when it moves. (VRI)

2010-12-28
- aes/funcdef.h, aes/gemdosif.S, aes/gemdosif.h, aes/gemgsxif.c,
  aes/gemgsxif.h, aes/geminput.c: Added minimal support for mouse wheel in
  the AES. (VRI)
- desk/deskwin.c: Fixed clipping when a non-top window is scrolled. (VRI)

2010-12-29
- bios/aciavecs.S, bios/ikbd.c, bios/tosvars.h, vdi/vdi_asm.S,
  vdi/vdi_mouse.c: Added BIOS and VDI support for extended mouse buttons
  3, 4 and 5. (VRI)
- desk/deskmain.c: Added scrolling on desktop windows using arrow keys. (VRI)

2011-01-02
- desk/deskpro.c: Removed useless space in front of the command line of
  textmode programs. (VRI)
- desk/desk_rsc.c, desk/desk_rsc.h, desk/deskapp.c: Added desktop support for
  GTP executables. (VRI)

2011-01-08
- vdi/vdi_mouse.c: Call user_but() only if the state of the extended buttons
  has really changed. (VRI)