@@ -2356,3 +2356,5 @@ Start... early ages
 2011-01-08
 - vdi/vdi_mouse.c: Call user_but() only if the state of the extended buttons
   has really changed. (VRI)
+- bios/ikbd.c, vdi/vdi_asm.S, vdi/vdi_mouse.c: Added support for the Eiffel
+  mouse wheel using simple scancodes instead of status frames.
